Colaboratory を使用して作成しました

--- a/06_01_pizza.ipynb
+++ b/06_01_pizza.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "06-01-pizza.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNiwoqwfmn9ucv9N6bdwZXg",
+      "authorship_tag": "ABX9TyNzFGyzupD/VVRSHd+iiW34",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,7 @@
         "from sklearn.neural_network import MLPRegressor\n",
         "#%matplotlib inline"
       ],
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
       "source": [
         "df= pd.read_csv(\"https://dl.dropbox.com/s/ttng1f37eesou74/pizza_v1.csv\")"
       ],
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -92,19 +92,207 @@
         "id": "iArzKYjuOR67"
       },
       "source": [
-        "データの中身を確認"
+        "データの中身を確認\n",
+        "\tcompany(メーカ) \tprice_rupiah(ルピア価格) \tdiameter(直径) \ttopping(トッピング)\tvariant(バリエーション)\tsize(サイズ) \textra_sauce(ソース増量)\textra_cheese(チーズ増量)"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gNtoEhbJplbm"
+        "id": "gNtoEhbJplbm",
+        "outputId": "562e3379-7119-4a3f-cb3b-7c25496fe783",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 422
+        }
       },
       "source": [
         "df"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>company</th>\n",
+              "      <th>price_rupiah</th>\n",
+              "      <th>diameter</th>\n",
+              "      <th>topping</th>\n",
+              "      <th>variant</th>\n",
+              "      <th>size</th>\n",
+              "      <th>extra_sauce</th>\n",
+              "      <th>extra_cheese</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>A</td>\n",
+              "      <td>Rp235,000</td>\n",
+              "      <td>22.0</td>\n",
+              "      <td>chicken</td>\n",
+              "      <td>double_signature</td>\n",
+              "      <td>jumbo</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>yes</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>A</td>\n",
+              "      <td>Rp198,000</td>\n",
+              "      <td>20.0</td>\n",
+              "      <td>papperoni</td>\n",
+              "      <td>double_signature</td>\n",
+              "      <td>jumbo</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>yes</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>A</td>\n",
+              "      <td>Rp120,000</td>\n",
+              "      <td>16.0</td>\n",
+              "      <td>mushrooms</td>\n",
+              "      <td>double_signature</td>\n",
+              "      <td>reguler</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>yes</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>A</td>\n",
+              "      <td>Rp155,000</td>\n",
+              "      <td>14.0</td>\n",
+              "      <td>smoked beef</td>\n",
+              "      <td>double_signature</td>\n",
+              "      <td>reguler</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>no</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>A</td>\n",
+              "      <td>Rp248,000</td>\n",
+              "      <td>18.0</td>\n",
+              "      <td>mozzarella</td>\n",
+              "      <td>double_signature</td>\n",
+              "      <td>jumbo</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>no</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>124</th>\n",
+              "      <td>E</td>\n",
+              "      <td>Rp39,000</td>\n",
+              "      <td>8.5</td>\n",
+              "      <td>tuna</td>\n",
+              "      <td>spicy tuna</td>\n",
+              "      <td>small</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>yes</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>125</th>\n",
+              "      <td>E</td>\n",
+              "      <td>Rp72,000</td>\n",
+              "      <td>12.0</td>\n",
+              "      <td>tuna</td>\n",
+              "      <td>spicy tuna</td>\n",
+              "      <td>medium</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>yes</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>126</th>\n",
+              "      <td>E</td>\n",
+              "      <td>Rp99,000</td>\n",
+              "      <td>14.0</td>\n",
+              "      <td>tuna</td>\n",
+              "      <td>spicy tuna</td>\n",
+              "      <td>large</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>yes</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>127</th>\n",
+              "      <td>E</td>\n",
+              "      <td>Rp44,000</td>\n",
+              "      <td>8.5</td>\n",
+              "      <td>meat</td>\n",
+              "      <td>BBQ_meat_fiesta</td>\n",
+              "      <td>small</td>\n",
+              "      <td>yes</td>\n",
+              "      <td>no</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>128</th>\n",
+              "      <td>E</td>\n",
+              "      <td>Rp78,000</td>\n",
+              "      <td>12.0</td>\n",
+              "      <td>meat</td>\n",
+              "      <td>BBQ_meat_fiesta</td>\n",
+              "      <td>medium</td>\n",
+              "      <td>no</td>\n",
+              "      <td>no</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>129 rows × 8 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    company price_rupiah  diameter  ...     size extra_sauce extra_cheese\n",
+              "0         A    Rp235,000      22.0  ...    jumbo         yes          yes\n",
+              "1         A    Rp198,000      20.0  ...    jumbo         yes          yes\n",
+              "2         A    Rp120,000      16.0  ...  reguler         yes          yes\n",
+              "3         A    Rp155,000      14.0  ...  reguler         yes           no\n",
+              "4         A    Rp248,000      18.0  ...    jumbo         yes           no\n",
+              "..      ...          ...       ...  ...      ...         ...          ...\n",
+              "124       E     Rp39,000       8.5  ...    small         yes          yes\n",
+              "125       E     Rp72,000      12.0  ...   medium         yes          yes\n",
+              "126       E     Rp99,000      14.0  ...    large         yes          yes\n",
+              "127       E     Rp44,000       8.5  ...    small         yes           no\n",
+              "128       E     Rp78,000      12.0  ...   medium          no           no\n",
+              "\n",
+              "[129 rows x 8 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -298,7 +486,7 @@
         "scale = MinMaxScaler()\n",
         "scalled = scale.fit_transform(df[cols_to_scale])"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -320,7 +508,7 @@
       "source": [
         "df['diameter'] = scalled[:,0]"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
