--- a/06_02_water.ipynb
+++ b/06_02_water.ipynb
@@ -87,7 +87,7 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas_profiling as pdp"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -285,7 +285,7 @@
         "from sklearn.utils import shuffle\n",
         "df = shuffle(df) # shuffling so that there is particular sequence"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -309,15 +309,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_py9ypvSzbAN"
-      },
-      "source": [
-        "duplicate があるのでこれをはずしておく"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -364,7 +355,7 @@
         "X = df.drop(['Potability'], axis = 1)\n",
         "y = df['Potability']"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -395,7 +386,7 @@
         "features= X.columns\n",
         "X[features] = sc.fit_transform(X[features])"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -425,13 +416,14 @@
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from xgboost import XGBClassifier\n",
+        "from sklearn.ensemble import AdaBoostClassifier\n",
         "from sklearn.neural_network import MLPClassifier\n",
         "from sklearn.svm import SVC\n",
         "\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score, f1_score"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -459,7 +451,7 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size = 0.1)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -642,7 +634,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     }
   ]
