Colaboratory を使用して作成しました

--- a/04_04_pandas_Profiling_の例（タイタニック）.ipynb
+++ b/04_04_pandas_Profiling_の例（タイタニック）.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "04-04_pandas Profiling の例（タイタニック）.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM2mYFy5ibrWYfALsJrygcc",
+      "authorship_tag": "ABX9TyMqAvT4Gf44fJ+jaM2oWBMX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "id": "SS-h6IN49aRl"
       },
       "source": [
-        "!pip install -U  pandas_profiling"
+        "!pip install ydata-profiling"
       ],
       "execution_count": null,
       "outputs": []
@@ -72,7 +72,7 @@
       },
       "source": [
         "import pandas as pd\n",
-        "import pandas_profiling as pdp\n",
+        "from ydata_profiling import ProfileReport\n",
         "import numpy as np"
       ],
       "execution_count": 4,
@@ -106,7 +106,7 @@
         "id": "ictkp61C7hM-"
       },
       "source": [
-        "df.info() \n",
+        "df.info()\n",
         "df.describe()"
       ],
       "execution_count": null,
@@ -128,7 +128,7 @@
         "id": "JscYOKHrgi0X"
       },
       "source": [
-        "pdp.ProfileReport(df)"
+        "ProfileReport(df)"
       ],
       "execution_count": null,
       "outputs": []
@@ -182,7 +182,7 @@
       "source": [
         "df['age']=df['age'].fillna(df['age'].mean()) # ageは平均値で埋める"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -193,7 +193,7 @@
       "source": [
         "df['embarked']=df['embarked'].fillna(df['embarked'].mode()[0])# embarkedは最頻値で埋める"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -225,7 +225,7 @@
         "X=df.drop(columns=['name','ticket','cabin','survived'])\n",
         "Y=df['survived']"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -268,7 +268,7 @@
         "  labelenc=LabelEncoder()\n",
         "  X[col]=labelenc.fit_transform(list(df[col].values))"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -296,9 +296,7 @@
       "metadata": {
         "id": "WuWql8DwSMlD"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
